created salary administrative

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
+    "jspdf": "^2.5.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
